--- a/README.adoc
+++ b/README.adoc
@@ -65,13 +65,13 @@ LogManager.shutdown();
 
 ## Configuring pre-built log4j application
 
-First download wanted versions of jla_05, rlp_01 and syslog-java-client from the following urls:
+First download wanted versions of jla_05, rlp_01 and rlo_14 from the following urls:
 
 https://search.maven.org/artifact/com.teragrep/jla_05[jla_05]
 
 https://search.maven.org/artifact/com.teragrep/rlp_01[rlp_01]
 
-https://search.maven.org/artifact/com.cloudbees/syslog-java-client[syslog-java-client]
+https://search.maven.org/artifact/com.teragrep/rlo_14[rlo_14]
 
 Then run java while pointing classpath to the directory where you downloaded the jars to like:
 
